Mais testes com 'carteira'

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -36,6 +36,10 @@
             <script src="{{ asset('assets/chart.js/Chart.min.js') }}"></script>
             <script src="{{ asset('assets/coreui/js/main.js') }}"></script>
             
+            <script src="{{ asset('assets/jquery-mask-plugin/js/jquery.mask.min.js') }}"></script>
+            <script src="{{ asset('assets/jquery-mask-money/js/jquery.maskMoney.js') }}"></script>
+            <script src="{{ asset('assets/crosier/js/form_handler.js') }}"></script>
+            
         {% endblock %}
         
     </head>
