--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -20,6 +20,9 @@
             <link rel="stylesheet" type="text/css" href="{{ asset('assets/crosier/css/crosier.css') }}">
             
             <link rel="stylesheet" type="text/css"href="{{ asset('assets/jqueryui/themes/base/jquery-ui.css') }}" />
+            
+            <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/bs4/dt-1.10.16/fh-3.1.3/datatables.min.css"/>
+ 
         {% endblock %}
         
         {% block up_scripts %}
@@ -39,6 +42,9 @@
             <script src="{{ asset('assets/jquery-mask-plugin/js/jquery.mask.min.js') }}"></script>
             <script src="{{ asset('assets/jquery-mask-money/js/jquery.maskMoney.js') }}"></script>
             <script src="{{ asset('assets/crosier/js/form_handler.js') }}"></script>
+            <script src="{{ asset('assets/crosier/js/list_handler.js') }}"></script>
+            
+            <script type="text/javascript" src="https://cdn.datatables.net/v/bs4/dt-1.10.16/fh-3.1.3/datatables.min.js"></script>
             
         {% endblock %}
         
