--- a/templates/financeiro/carteiraForm.html.twig
+++ b/templates/financeiro/carteiraForm.html.twig
@@ -47,7 +47,7 @@
 
 		{% endfor %}
 
-		{% form_theme form 'bootstrap_4_layout.html.twig' %}
+		{% form_theme form 'bootstrap_4_horizontal_layout.html.twig' %}
 
 		{{ form_start(form) }}
 		{{ form_widget(form) }}
