Adicionando entidades para Financeiro.

--- a/templates/Financeiro/carteiraForm.html.twig
+++ b/templates/Financeiro/carteiraForm.html.twig
@@ -25,31 +25,8 @@
 
 	<div class="card-body">
 
-
-		{% for flashMessage in app.flashes('success') %}
-
-		<div class="alert alert-success alert-dismissible fade show"
-			role="alert">
-			<h4 class="alert-heading">Erro</h4>
-			<p>
-				{{ flashMessage }}
-			</p>
-		</div>
-
-		{% endfor %}
-
-		{% for flashMessage in app.flashes('error') %}
-
-		<div class="alert alert-danger alert-dismissible fade show"
-			role="alert">
-			<h4 class="alert-heading">Erro</h4>
-			<p>
-				{{ flashMessage }}
-			</p>
-		</div>
-
-		{% endfor %}
-
+		{{ include('util/flashes.html.twig') }}
+		
 		{% form_theme form 'bootstrap_4_horizontal_layout.html.twig' %}
 
 		{{ form_start(form) }}
