--- a/templates/Financeiro/movimentacaoList.html.twig
+++ b/templates/Financeiro/movimentacaoList.html.twig
@@ -10,10 +10,10 @@
 	<div class="card-header">
 
 		<div class="row">
-			<div class="col-8">
+			<div class="col-4">
 				<h3>Movimentações</h3>
 			</div>
-			<div class="col-4 text-right">
+			<div class="col-8 text-right">
 				<button type="button" class="btn btn-primary" onclick="window.location.href='{{ url('movimentacao_form') }}'">
 					<i class="fas fa-file" aria-hidden="true"></i> Novo
 				</button>
@@ -42,6 +42,7 @@
 						<th scope="col">Código</th>
 						<th scope="col">Descrição</th>
 						<th scope="col">Dt Útil</th>
+						<th scope="col">Valor</th>
 						<th scope="col"></th>
 					</tr>
 				</thead>
@@ -53,6 +54,7 @@
 						<td>{{ item.id }}</td>
 						<td>{{ item.descricao }}</td>
 						<td>{{ item.dtUtil|date('d/m/Y') }}</td>
+						<td class="text-right">{{ item.valorTotal|number_format(2,',','.') }}</td>
 						<td class="text-right">
 							<button type="button" class="btn btn-primary" onclick="window.location.href='{{ url('movimentacao_form', {id: item.id}) }}'">
 								<i class="fas fa-wrench" aria-hidden="true"></i>
@@ -76,13 +78,59 @@
 <div class="modal fade" id="pesquisarModal" tabindex="-1">
 	<div class="modal-dialog modal-dialog-centered">
 		<div class="modal-content">
-			<form action="{{ url('carteira_list') }}" method="get">
+			<form action="{{ url('movimentacao_list') }}" method="get">
 				<div class="modal-body">
 					<h4>Pesquisar</h4>
 
 					<div class="form-group">
 						<label for="p_descricao">Descrição</label>
 						<input type="text" class="form-control" id="filter[descricao]" name="filter[descricao]" value="{{ filter.descricao|default('') }}">
+					</div>
+					<div class="form-group">
+						<label>Data</label>
+						<div class="row">
+							<div class="col">
+								<input type="date" size="15" class="form-control" name="filter[dtUtil][i]" value="{{ filter.dtUtil.i|default('') }}">
+							</div>
+							<div class="col">
+								<input type="date" size="15" class="form-control" name="filter[dtUtil][f]" value="{{ filter.dtUtil.f|default('') }}">
+							</div>
+						</div>
+					</div>
+					<div class="form-group">
+						<label>Valor</label>
+						<div class="row">
+							<div class="col">
+								<input type="text" size="15" class="form-control crsr-money" name="filter[valorTotal][i]"
+									value="{{ filter.valorTotal.i|default('') }}">
+							</div>
+							<div class="col">
+								<input type="text" size="15" class="form-control crsr-money" name="filter[valorTotal][f]"
+									value="{{ filter.valorTotal.f|default('') }}">
+							</div>
+						</div>
+					</div>
+					<div class="form-group">
+						<fieldset class="form-group pre-scrollable">
+							<legend>Carteiras</legend>
+							{% for carteira in filterDatas.carteiras %}
+							<div class="form-check">
+								<input class="form-check-input" type="checkbox" value="{{ carteira.id }}" checked="checked" name="filter[carteira][]">
+								<label class="form-check-label" for="defaultCheck1"> {{ "%03d"|format(carteira.codigo) }} -{{ carteira.descricao }} </label>
+							</div>
+							{% endfor %}
+						</fieldset>
+					</div>
+					<div class="form-group">
+						<fieldset class="form-group pre-scrollable">
+							<legend>Carteiras</legend>
+							{% for carteira in filterDatas.carteiras %}
+							<div class="form-check">
+								<input class="form-check-input" type="checkbox" value="{{ carteira.id }}" checked="checked" name="filter[carteira][]">
+								<label class="form-check-label" for="defaultCheck1"> {{ "%03d"|format(carteira.codigo) }} -{{ carteira.descricao }} </label>
+							</div>
+							{% endfor %}
+						</fieldset>
 					</div>
 				</div>
 				<div class="modal-footer">
