movimentacaoForm.html.twig

--- a/templates/Financeiro/movimentacaoList.html.twig
+++ b/templates/Financeiro/movimentacaoList.html.twig
@@ -14,16 +14,13 @@
 				<h3>Movimentações</h3>
 			</div>
 			<div class="col-8 text-right">
-				<button type="button" class="btn btn-primary"
-					onclick="window.location.href='{{ url('movimentacao_form') }}'">
+				<button type="button" class="btn btn-primary" onclick="window.location.href='{{ url('movimentacao_form') }}'">
 					<i class="fas fa-file" aria-hidden="true"></i> Novo
 				</button>
-				<button type="button" class="btn btn-secondary"
-					data-target="#pesquisarModal" data-toggle="modal">
+				<button type="button" class="btn btn-secondary" data-target="#pesquisarModal" data-toggle="modal">
 					<i class="fas fa-search" aria-hidden="true"></i> Pesquisar
 				</button>
-				<button type="button" class="btn btn-secondary"
-					onclick="window.location.href='{{ url('movimentacao_list') }}'">
+				<button type="button" class="btn btn-secondary" onclick="window.location.href='{{ url('movimentacao_list') }}'">
 					<i class="fas fa-sync" aria-hidden="true"></i> Recarregar
 				</button>
 			</div>
@@ -42,8 +39,10 @@
 				<thead>
 					<tr>
 						<th scope="col">Código</th>
-						<th scope="col">Status</th>
-						<th scope="col">Categoria<br />Carteira</th>
+						<th scope="col">Status<br />Modo
+						</th>
+						<th scope="col">Categoria<br /> Carteira
+						</th>
 						<th scope="col">Descrição</th>
 						<th scope="col">Dt Útil</th>
 						<th scope="col">Valor</th>
@@ -53,26 +52,20 @@
 
 				<tbody>
 					{% for item in dados %}
-					<tr>
+					<tr class="{{ item.categoria.codigo|first == '1' ? 'table-success' : 'table-danger' }}">
 						<td>{{ item.id }}</td>
-						<td>{{ item.status }}</td>
-						<td>
-							{{ item.categoria.codigoM ~ ' - ' ~ item.categoria.descricao }}<br />
-						    {{ item.carteira.descricao }}
-						</td>
+						<td>{{ item.status }}<br /> {{ item.modo.descricao }}</td>
+						<td>{{ item.categoria.codigoM ~ ' - ' ~ item.categoria.descricao }}<br /> {{ item.carteira.descricao }}</td>
 						<td>{{ item.descricao }}</td>
 						<td>{{ item.dtUtil|date('d/m/Y') }}</td>
 						<td class="text-right">{{ item.valorTotal|number_format(2,',','.') }}</td>
 						<td class="text-right">
-							<button type="button" class="btn btn-primary"
-								onclick="window.location.href='{{ url('movimentacao_form', {id: item.id}) }}'">
+							<button type="button" class="btn btn-primary" onclick="window.location.href='{{ url('movimentacao_form', {id: item.id}) }}'">
 								<i class="fas fa-wrench" aria-hidden="true"></i>
 							</button>
 
-							<button type="button" class="btn btn-danger"
-								data-url="{{ url('movimentacao_delete', {id: item.id}) }}"
-								data-token="{{ csrf_token('delete') }}"
-								data-target="#confirmationModal" data-toggle="modal">
+							<button type="button" class="btn btn-danger" data-url="{{ url('movimentacao_delete', {id: item.id}) }}"
+								data-token="{{ csrf_token('delete') }}" data-target="#confirmationModal" data-toggle="modal">
 								<i class="fa fa-trash" aria-hidden="true"></i>
 							</button>
 						</td>
@@ -95,22 +88,16 @@
 
 					<div class="form-group">
 						<label for="p_descricao">Descrição</label>
-						<input type="text" class="form-control" id="filter[descricao]"
-							name="filter[descricao]"
-							value="{{ filter.descricao|default('') }}">
+						<input type="text" class="form-control" id="filter[descricao]" name="filter[descricao]" value="{{ filter.descricao|default('') }}">
 					</div>
 					<div class="form-group">
 						<label>Data</label>
 						<div class="row">
 							<div class="col">
-								<input type="date" size="15" class="form-control"
-									name="filter[dtUtil][i]"
-									value="{{ filter.dtUtil.i|default('') }}">
+								<input type="date" size="15" class="form-control" name="filter[dtUtil][i]" value="{{ filter.dtUtil.i|default('') }}">
 							</div>
 							<div class="col">
-								<input type="date" size="15" class="form-control"
-									name="filter[dtUtil][f]"
-									value="{{ filter.dtUtil.f|default('') }}">
+								<input type="date" size="15" class="form-control" name="filter[dtUtil][f]" value="{{ filter.dtUtil.f|default('') }}">
 							</div>
 						</div>
 					</div>
@@ -118,13 +105,11 @@
 						<label>Valor</label>
 						<div class="row">
 							<div class="col">
-								<input type="text" size="15" class="form-control crsr-money"
-									name="filter[valorTotal][i]"
+								<input type="text" size="15" class="form-control crsr-money" name="filter[valorTotal][i]"
 									value="{{ filter.valorTotal.i|default('') }}">
 							</div>
 							<div class="col">
-								<input type="text" size="15" class="form-control crsr-money"
-									name="filter[valorTotal][f]"
+								<input type="text" size="15" class="form-control crsr-money" name="filter[valorTotal][f]"
 									value="{{ filter.valorTotal.f|default('') }}">
 							</div>
 						</div>
@@ -137,9 +122,7 @@
                                set checked = ((filter is defined) and (filter.carteira is defined) and (carteira.id in filter.carteira)) ? 'checked' : ''
 							%}
 							<div class="form-check">
-								<input class="form-check-input" type="checkbox"
-									value="{{ carteira.id }}" {{ checked }}
-									name="filter[carteira][]">
+								<input class="form-check-input" type="checkbox" value="{{ carteira.id }}" {{ checked }} name="filter[carteira][]">
 								<label class="form-check-label">
 									{{ "%03d"|format(carteira.codigo) }}
 									-
@@ -149,7 +132,7 @@
 							{% endfor %}
 						</fieldset>
 					</div>
-					
+
 					<div class="form-group">
 						<fieldset class="form-group pre-scrollable" style="height: 150px">
 							<legend>Status</legend>
@@ -158,9 +141,7 @@
                                set checked = ((filter is defined) and (filter.status is defined) and (status.sigla in filter.status)) ? 'checked' : ''
 							%}
 							<div class="form-check">
-								<input class="form-check-input" type="checkbox"
-									value="{{ status.sigla }}" {{ checked }}
-									name="filter[status][]">
+								<input class="form-check-input" type="checkbox" value="{{ status.sigla }}" {{ checked }} name="filter[status][]">
 								<label class="form-check-label">
 									{{ status.label }}
 								</label>
@@ -169,10 +150,44 @@
 						</fieldset>
 					</div>
 
+					<div class="form-group">
+						<fieldset class="form-group pre-scrollable" style="height: 150px">
+							<legend>Modo</legend>
+							{% for modo in filterDatas.modos %}
+							{% 
+                               set checked = ((filter is defined) and (filter.modo is defined) and (modo.id in filter.modo)) ? 'checked' : ''
+							%}
+							<div class="form-check">
+								<input class="form-check-input" type="checkbox" value="{{ modo.id }}" {{ checked }} name="filter[modo][]">
+								<label class="form-check-label">
+									{{ modo.descricao }}
+								</label>
+							</div>
+							{% endfor %}
+						</fieldset>
+					</div>
+					
+					<div class="form-group">
+						<fieldset class="form-group pre-scrollable" style="height: 150px">
+							<legend>Categoria</legend>
+							{% for categoria in filterDatas.categorias %}
+							{% 
+                               set checked = ((filter is defined) and (filter.categoria is defined) and (categoria.id in filter.categoria)) ? 'checked' : ''
+							%}
+							<div class="form-check">
+								<input class="form-check-input" type="checkbox" value="{{ categoria.id }}" {{ checked }} name="filter[categoria][]">
+								<label class="form-check-label">
+									{{ categoria.descricaoMontada }}
+								</label>
+							</div>
+							{% endfor %}
+						</fieldset>
+					</div>
+
+
 				</div>
 				<div class="modal-footer">
-					<button type="button" class="btn btn-default"
-						id="btnCancelarPesquisa" data-dismiss="modal">
+					<button type="button" class="btn btn-default" id="btnCancelarPesquisa" data-dismiss="modal">
 						<i class="fa fa-ban" aria-hidden="true"></i> Cancelar
 					</button>
 					<button type="submit" class="btn btn-danger" id="btnPesquisar">
