--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -22,6 +22,7 @@
             <link rel="stylesheet" type="text/css"href="{{ asset('assets/jqueryui/themes/base/jquery-ui.css') }}" />
             
             <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/bs4/dt-1.10.16/fh-3.1.3/datatables.min.css"/>
+            
  
         {% endblock %}
         
@@ -31,7 +32,7 @@
             <script src="{{ asset('assets/jqueryui/jquery-ui.js') }}"></script>
             
             
-            <script src="{{ asset('assets/popper.js/dist/umd/popper.min.js') }}"></script>
+            <script src="{{ asset('assets/popper.js/dist/popper.min.js') }}"></script>
             <script src="{{ asset('assets/pace-progress/pace.min.js') }}"></script>
             <script src="{{ asset('assets/perfect-scrollbar/dist/perfect-scrollbar.min.js') }}"></script>
             <script src="{{ asset('assets/coreui/js/coreui.min.js') }}"></script>
@@ -45,6 +46,7 @@
             <script src="{{ asset('assets/crosier/js/list_handler.js') }}"></script>
             
             <script type="text/javascript" src="https://cdn.datatables.net/v/bs4/dt-1.10.16/fh-3.1.3/datatables.min.js"></script>
+            
             
         {% endblock %}
         
