--- a/templates/Financeiro/movimentacaoForm.html.twig
+++ b/templates/Financeiro/movimentacaoForm.html.twig
@@ -25,8 +25,8 @@
 
 	<div class="card-body">
 
-		{{ include('util/flashes.html.twig') }}
-		
+		{{ include('Util/flashes.html.twig') }}
+
 		{% form_theme form 'bootstrap_4_horizontal_layout.html.twig' %}
 
 		{{ form_start(form) }}
@@ -75,6 +75,17 @@
 				$(form).appendTo('body').submit();
 
 			});
+
+
+
+	// In your Javascript (external .js resource or <script> tag)
+	$(document).ready(function() {
+	    $('#movimentacao_categoria').select2();
+	});
+	
+	
+	
+	
 
 </script>
 
