--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -23,6 +23,10 @@
             
             <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/bs4/dt-1.10.16/fh-3.1.3/datatables.min.css"/>
             
+            
+            <link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.6-rc.0/css/select2.min.css" rel="stylesheet" />
+            
+                        
  
         {% endblock %}
         
@@ -45,8 +49,10 @@
             <script src="{{ asset('assets/crosier/js/form_handler.js') }}"></script>
             <script src="{{ asset('assets/crosier/js/list_handler.js') }}"></script>
             
+            
             <script type="text/javascript" src="https://cdn.datatables.net/v/bs4/dt-1.10.16/fh-3.1.3/datatables.min.js"></script>
             
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.6-rc.0/js/select2.min.js"></script>
             
         {% endblock %}
         
