Tentando implementar autocomplete

--- a/templates/Financeiro/movimentacaoForm.html.twig
+++ b/templates/Financeiro/movimentacaoForm.html.twig
@@ -5,6 +5,9 @@
 
 {% block page_content %}
 
+<select id="testando">
+<option value="234908490328">blabla</option>
+</select>
 
 <div class="card">
 	<div class="card-header">
@@ -14,8 +17,7 @@
 				<h3>Movimentação</h3>
 			</div>
 			<div class="col-4 text-right">
-				<button type="button" class="btn btn-secondary"
-					onclick="window.location.href='{{ url('movimentacao_list') }}'">
+				<button type="button" class="btn btn-secondary" onclick="window.location.href='{{ url('movimentacao_list') }}'">
 					<i class="fas fa-sync" aria-hidden="true"></i> Listar
 				</button>
 			</div>
@@ -38,8 +40,7 @@
 					<i class="fas fa-save" aria-hidden="true"></i> Salvar
 				</button>
 
-				<button type="button" value="Resetar" class="btn btn-secondary"
-					data-url="{{ url('movimentacao_form') }}"
+				<button type="button" value="Resetar" class="btn btn-secondary" data-url="{{ url('movimentacao_form') }}"
 					data-target="#confirmationModal" data-toggle="modal">
 					<i class="fas fa-undo" aria-hidden="true"></i> Recarregar
 				</button>
@@ -80,8 +81,55 @@
 
 	// In your Javascript (external .js resource or <script> tag)
 	$(document).ready(function() {
-	    $('#movimentacao_categoria').select2();
+
+		var data2 = [
+		    {
+		        id: 0,
+		        text: 'enhancement'
+		    },
+		    {
+		        id: 1,
+		        text: 'bug'
+		    },
+		    {
+		        id: 2,
+		        text: 'duplicate'
+		    },
+		    {
+		        id: 3,
+		        text: 'invalid'
+		    },
+		    {
+		        id: 4,
+		        text: 'wontfix'
+		    }
+		];
+
+		$("#testando").select2({
+		  data: data2
+		});
+		
+	    $("#movimentacao_pessoa").select2({
+	    	  ajax: {
+	    	    delay: 250,
+	    	    url: function (params) {
+					console.log(params);
+	    	        return '{{ url('pessoaFindByNome') }}' + '/' + params.term;
+	    	    },
+	    	    dataType: 'json',
+	    	    processResults: function (data, params) {
+					var dataNew = $.map(data.results, function (obj) {
+						obj.text = obj.nome; // replace name with the property used for the text
+						return obj;
+					});
+    				return { results: dataNew };
+				},
+	    	    cache: true
+	    	  },
+	    	  minimumInputLength: 1
+	    	});
 	});
+	
 	
 	
 	
