--- a/templates/Financeiro/movimentacaoForm.html.twig
+++ b/templates/Financeiro/movimentacaoForm.html.twig
@@ -13,7 +13,8 @@
 				<h3>Movimentação</h3>
 			</div>
 			<div class="col-4 text-right">
-				<button type="button" class="btn btn-secondary" onclick="window.location.href='{{ url('movimentacao_list') }}'">
+				<button type="button" class="btn btn-secondary"
+					onclick="window.location.href='{{ url('movimentacao_list') }}'">
 					<i class="fas fa-sync" aria-hidden="true"></i> Listar
 				</button>
 			</div>
@@ -36,7 +37,8 @@
 					<i class="fas fa-save" aria-hidden="true"></i> Salvar
 				</button>
 
-				<button type="button" value="Resetar" class="btn btn-secondary" data-url="{{ url('movimentacao_form') }}"
+				<button type="button" value="Resetar" class="btn btn-secondary"
+					data-url="{{ url('movimentacao_form') }}"
 					data-target="#confirmationModal" data-toggle="modal">
 					<i class="fas fa-undo" aria-hidden="true"></i> Recarregar
 				</button>
@@ -77,7 +79,8 @@
 
 	// In your Javascript (external .js resource or <script> tag)
 	$(document).ready(function() {
-		
+		$("#movimentacao_documentoBanco").select2();
+			
 	    $("#movimentacao_pessoa").select2({
 	    	  ajax: {
 	    	    delay: 250,
@@ -97,6 +100,21 @@
 	    	  },
 	    	  minimumInputLength: 1
 	    	});
+
+
+		function resValorTotal() {
+			var valor = $("#movimentacao_valor").maskMoney('unmasked')[0];
+			var descontos = $("#movimentacao_descontos").maskMoney('unmasked')[0];
+			var acrescimos = $("#movimentacao_acrescimos").maskMoney('unmasked')[0];
+			var valorTotal = (valor - descontos + acrescimos).toFixed(2);
+			$("#movimentacao_valor_total").val(valorTotal);
+			$("#movimentacao_valor_total").maskMoney('mask');
+			
+		}
+	    
+    	$("#movimentacao_valor").blur(function () {resValorTotal()});
+    	$("#movimentacao_descontos").blur(function () {resValorTotal()});
+    	$("#movimentacao_acrescimos").blur(function () {resValorTotal()});
 	});
 	
 	
