--- a/public/assets/crosier/css/crosier.css
+++ b/public/assets/crosier/css/crosier.css
@@ -13,3 +13,12 @@ input[type=submit], input[type=button]  {
     text-align: right;
     text-transform: none;
 }
+
+
+div.paceDiv {
+   position: absolute;
+   width: 100%;
+   height: 100%;
+   
+   display: none;
+}
